--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_hooks: ^0.20.1
   flutter_mjpeg: ^2.0.4
   go_router: ^10.1.2
+  wakelock_plus: ^1.1.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
